# Pixel-Maker

./: .gitignore  README.md  pyproject.toml
docs/harness/: audit.jsonl  current-scope.md  kickoff-done  kickoff-summary.md  rubric-report.md  seed.yaml
pixelmaker/: cli.py  mcp_server.py
pixelmaker/core/: errors.py  extractor.py  grid_detector.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_formats.py  test_grid_detector.py  test_mcp_server.py  test_transparency.py
